Fixed typeahead magnificy glass image on IE11 and fixed footer positioning on mobile

--- a/src/assets/scss/mts/modules/footer/_footer.scss
+++ b/src/assets/scss/mts/modules/footer/_footer.scss
@@ -15,6 +15,12 @@
       margin-right: -15px;
     }
 
+    @media(max-width: 640px) {
+      padding-bottom: $gutter;
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+
     @import 'partials/footer-resources';
 
     hr {
@@ -25,6 +31,12 @@
       
       @include media(tablet) {
         margin-bottom: 0;
+      }
+
+      @media(max-width: 640px) {
+        margin-bottom: 0;
+        margin-top: 30px;
+        display: block;
       }
     }
 
